--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express-session": "^1.14.1",
     "method-override": "^2.3.6",
     "mongoose": "^4.6.3",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
